discussion/kv_engine/184912/184912_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54876: Add support for magma dynamic block sizes

Add 4 new configuration parameters:
magma_seq_tree_data_block_size
magma_seq_tree_index_block_size
magma_key_tree_data_block_size
magma_key_tree_data_block_size

Support for dynamically tunable block sizes for magma sstables.

Change-Id: I3438862d068ca0967c59dffdcff5cb3e857fbff5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2023-01-13 00:07:00.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-13 00:07:19.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332272/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-13 00:31:55.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22118/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/utilities/debug_variable.h b/utilities/debug_variable.h
index 55f4018fe..a390fbe36 100644
--- a/utilities/debug_variable.h
+++ b/utilities/debug_variable.h
@@ -87,7 +87,7 @@ public:
     }
 
     DebugVariable(const DebugVariable&amp;) = delete;
-    DebugVariable(DebugVariable&amp;&amp;) = delete;
+    DebugVariable(DebugVariable &amp;&amp;) = delete;
 
     DebugVariable&amp; operator=(const DebugVariable&amp;) = delete;
     DebugVariable&amp; operator=(DebugVariable&amp;&amp;) = delete;

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22118/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/784/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3393:46: error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksSize", magmaStats->DataBlocksSize);
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3394:54: error: no member named "DataBlocksCompressSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
    fill("magma_DataBlocksCompressSize", magmaStats->DataBlocksCompressSize);
                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12: error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetSeqTreeDataBlockSize(value);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:522:12: error: no member named "SetSeqTreeIndexBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetSeqTreeIndexBlockSize(value);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:527:12: error: no member named "SetKeyTreeDataBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetKeyTreeDataBlockSize(value);
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:532:12: error: no member named "SetKeyTreeIndexBlockSize" in "magma::Magma" [clang-diagnostic-error]
    magma->SetKeyTreeIndexBlockSize(value);
           ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/784/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3393:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/784/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/961/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc(3393): error C2039: "DataBlocksSize": is not a member of "magma::Magma::MagmaStats" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/961/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/755/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/755/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/790/ : FAILURE

Compile error at [2023-01-13T00:12:34.629Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3393:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/790/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/803/ : FAILURE

Compile error at [2023-01-13T00:25:55.170Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3393:46:
error: no member named "DataBlocksSize" in "magma::Magma::MagmaStats"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/803/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/796/ : FAILURE

Compile error at [2023-01-13T00:28:22.982Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/796/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/776/ : FAILURE

Compile error at [2023-01-13T00:30:33.925Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/776/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/795/ : FAILURE

Compile error at [2023-01-13T00:25:59.733Z] /home/couchbase/jenkins/workspace/kv_engine.linux_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3393:46:
error: ?struct magma::Magma::MagmaStats? has no member named ?DataBlocksSize?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/795/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1072/ : FAILURE

Compile error at [2023-01-13T00:09:47.371Z] /Users/couchbase/workspace/workspace/kv_engine.macos_neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.cc:517:12:
error: no member named "SetSeqTreeDataBlockSize" in "magma::Magma"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1072/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/805/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
